--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
         <h1>ProdByEH</h1>
     </div>
     <nav>
-        <a href="../index.html">Professional Page</a> <!--This is a COMMMENT-->
+        <a href="index.html">Professional Page</a> <!--This is a COMMMENT-->
         <a href="webapp.html">BYU Tic-Tac-Toe</a>
 
     </nav>
